--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fabrick_demo?useSSL=false&serverTimezone=UTC
+spring.datasource.username=fabrick_demo
+spring.datasource.password=fabrick_demo
+spring.jpa.database=mysql
+spring.jpa.open_in_view=false
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.maximum-pool-size=5
+
 # Fabrick Sandobx
 com.pastore.fabrick.baseurl=https://sandbox.platfr.io
 com.pastore.fabrick.authschema=S2S
